Make Array#min/max optimization respect refined methods

While here, add a test for Array#min/max being redefined to
test_optimization.rb.

Fixes [Bug #18180]